src/App.css
html,
body,
#root {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
}

body {
  font-size: 1.8rem;
  font-family: Arial, Helvetica, sans-serif;
}

.ui-main {
  position: fixed;
  inset: 0;
  z-index: 10;
  pointer-events: none;
}

.ui-clickable {
  pointer-events: auto;
  cursor: pointer;
}

.ui-section {
  position: fixed;
  inset: 0;
  display: flex;
  align-items: center;
  overflow-y: auto;
  transition: opacity 1s;
  color: white;
}

.ui-section.Section1 {
  width: 40%;
  margin: 0 auto 0 10%;
}

.ui-section.Section1 h1 {
  color: #683e98;
  font-size: 5.5rem;
  line-height: 5rem;
  margin: 0 0 2.8rem 0;
}

.ui-section.Section2 {
  width: 90%;
  margin: 0 auto;
}

.ui-section.Section2 h1 {
  color: #683e98;
  font-size: 5.5rem;
  line-height: 5rem;
}

.ui-section__wrapper {
  color: white;
}
.ui-section2__wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 10rem;
}

.ui-section2__img {
  align-self: center;
  justify-self: center;
  width: 100%;
}

.ui-section--hidden {
  opacity: 0;
  pointer-events: none;
}

button {
  padding: 1.25rem 2.5rem;
  font-size: 1.8rem;
  background-color: #000;
  border: 4px solid #683e98;
  border-radius: 1.4rem;
  color: #683e98;
  margin-top: 1.8rem;
}

@media screen and (max-width: 1900px) {
  body {
    font-size: 1.4rem;
  }

  .ui-section.Section1 h1 {
    font-size: 4.5rem;
    line-height: 4rem;
    margin: 0 0 2rem 0;
  }

  .ui-section.Section2 {
    width: 90%;
    margin: 0 auto;
  }

  .ui-section.Section2 h1 {
    color: #683e98;
    font-size: 4.5rem;
    line-height: 4rem;
  }
}

@media screen and (max-width: 1700px) {
  body {
    font-size: 1.2rem;
  }

  .ui-section.Section1 h1 {
    max-width: 80%;
    font-size: 3.5rem;
    line-height: 4rem;
    margin: 0 0 1.5rem 0;
  }

  .ui-section.Section1 {
    width: 50%;
    margin: 0 auto 0 10%;
  }

  .ui-section.Section2 h1 {
    color: #683e98;
    font-size: 3.5rem;
    line-height: 4rem;
    margin: 0 0 1.5rem 0;
  }

  button {
    padding: 1rem 2.5rem;
    font-size: 1.4rem;
    background-color: #000;
    border: 4px solid #683e98;
    border-radius: 1.4rem;
    color: #683e98;
    margin-top: 1.5rem;
  }
}

@media screen and (max-width: 1400px) {
  body {
    font-size: 1.2rem;
  }

  .ui-section.Section1 h1 {
    max-width: 80%;
    font-size: 3.5rem;
    line-height: 4rem;
    margin: 0 0 1.5rem 0;
  }

  .ui-section.Section1 {
    width: 60%;
    margin: 0 auto 0 10%;
  }

  .ui-section2__wrapper {
    grid-template-columns: 1fr;
  }

  .ui-section2__img {
    display: none;
  }

  .ui-section.Section2 {
    width: 70%;
    margin: 0 auto;
  }
}

@media screen and (max-width: 1115px) {
  .ui-section.Section1 h1 {
    max-width: 85%;
    font-size: 3rem;
    line-height: 3rem;
    margin: 0 0 1.5rem 0;
  }
}

@media screen and (max-width: 1050px) {
  body {
    font-size: 1.1rem;
  }

  .ui-section.Section1 h1 {
    max-width: 80%;
    font-size: 3rem;
    line-height: 3rem;
    margin: 0 0 1.5rem 0;
  }

  .ui-section.Section1 {
    width: 60%;
    margin: 0 auto 0 10%;
  }
}

@media screen and (max-width: 952px) {
  .ui-section.Section1 h1 {
    max-width: 80%;
    font-size: 2.8rem;
    line-height: 2.8rem;
    margin: 0 0 1.5rem 0;
  }

  .ui-section.Section1 {
    width: 70%;
    margin: 0 auto;
  }
}

@media screen and (max-width: 761px) {
  .ui-section.Section1 h1 {
    max-width: 100%;
    font-size: 2.8rem;
    line-height: 2.8rem;
    margin: 0 0 1.5rem 0;
  }

  .ui-section.Section1 {
    width: 70%;
  }

  .ui-section.Section2 h1 {
    font-size: 2.8rem;
    line-height: 2.8rem;
    margin: 0 0 1.5rem 0;
  }
}

@media screen and (max-width: 600px) {
  .ui-section.Section1 {
    width: 80%;
  }
}

@media screen and (max-width: 500px) {
  body {
    font-size: 1rem;
    line-height: 1.25rem;
  }
  .ui-section.Section1 h1 {
    max-width: 100%;
    font-size: 2rem;
    line-height: 2rem;
    margin: 0 0 1.5rem 0;
  }

  .ui-section.Section1 {
    width: 80%;
  }

  .ui-section.Section2 h1 {
    font-size: 2rem;
    line-height: 2rem;
    margin: 0 0 1.5rem 0;
  }

  button {
    padding: 1rem 2.5rem;
    font-size: 1.2rem;
    background-color: #000;
    border: 4px solid #683e98;
    border-radius: 1.4rem;
    color: #683e98;
    margin-top: 0.5rem;
  }
}

@media screen and (max-width: 375px) {
  .ui-section.Section1 h1 {
    max-width: 100%;
    font-size: 1.6rem;
    line-height: 1.6rem;
    margin: 0 0 0.5rem 0;
  }

  .ui-section.Section1 {
    width: 80%;
  }

  button {
    padding: 1rem 2.5rem;
    font-size: 1.2rem;
    background-color: #000;
    border: 4px solid #683e98;
    border-radius: 1.4rem;
    color: #683e98;
    margin-top: 0.5rem;
  }
}

